; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-http-server.c_cur_http_date.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-http-server.c_cur_http_date.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@now_date_utime = common dso_local global i64 0, align 8
@now = common dso_local global i64 0, align 8
@now_date_string = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @cur_http_date() #0 {
  %1 = load i64, i64* @now_date_utime, align 8
  %2 = load i64, i64* @now, align 8
  %3 = icmp ne i64 %1, %2
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i8*, i8** @now_date_string, align 8
  %6 = load i64, i64* @now, align 8
  store i64 %6, i64* @now_date_utime, align 8
  %7 = call i32 @gen_http_date(i8* %5, i64 %6)
  br label %8

8:                                                ; preds = %4, %0
  %9 = load i8*, i8** @now_date_string, align 8
  ret i8* %9
}

declare dso_local i32 @gen_http_date(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
